--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=snapspace
-spring.data.mongodb.uri=YOUR MONGO_DB URI
+spring.data.mongodb.uri=YOUR_MONGODB_URI
 logging.level.org.springframework.security=DEBUG
